syntax = "proto3";

import "validate/validate.proto";
import "google/protobuf/empty.proto";

option go_package = "./pbservices";

package services;

service Viewer{
  rpc RetrieveServiceDetail (RetrieveServiceDetailRequest) returns (RetrieveServiceDetailResponse){}
}

service Calendars{
  rpc CreateCalendar (CreateCalendarRequest) returns (CreateCalendarResponse) {}
  rpc RetrieveCalendar (RetrieveCalendarRequest) returns (CalendarData) {}
  rpc RetrieveMyCalendars (RetrieveMyCalendarsRequest) returns (RetrieveMyCalendarsResponse) {}
}

service Register{
  rpc RetrieveRegistry (RetrieveRegistryRequest) returns (RetrieveRegistryResponse) {}
  rpc DeleteRegistry (DeleteRegistryRequest) returns (google.protobuf.Empty) {}

  rpc Prev (PrevRequest) returns (google.protobuf.Empty) {}

  rpc First (FirstRequest) returns (FirstResponse) {}
  rpc Second (SecondRequest) returns (google.protobuf.Empty) {}
  rpc Third (ThirdRequest) returns (ThirdResponse) {}
}

message RetrieveServiceDetailRequest {
  uint64 service_id = 1;
}

message RetrieveServiceDetailResponse {
  ServiceData service = 1;
  UserData user = 2;
  AddressData address = 3;
  CalendarData calendar = 4;
}

message UserData {
  string name = 1;
  string surname = 2;
}

message AddressData {
  string zipcode = 1;
  string street = 2;
  uint64 number = 3;
  uint64 floor = 4;
  uint64 department = 5;
}

message RetrieveCalendarRequest {
  uint64 calendar_id = 1;
}

message RetrieveMyCalendarsRequest {
  string access_token = 1;
}

message RetrieveMyCalendarsResponse {
  map<uint64, CalendarData> calendars = 1;
}

message RetrieveRegistryRequest {
  string access_token = 1;
}

message DeleteRegistryRequest {
  string access_token = 1;
}

message RetrieveRegistryResponse {
  uint64 registry_id = 1;
  uint64 stage = 2;
  FirstRequest.Body first = 3;
  SecondRequest.Body second = 4;
  ThirdRequest.Body third = 5;
}

message ServiceData {
  uint64 address_id = 1;
  string name = 2;
  uint64 duration_in_minutes = 3;
  Price price = 4;
  uint64 calendar_id = 5;
  uint64 user_id = 6;
}

message PrevRequest {
  string access_token = 1;
}

message FirstRequest {
  message Body {
    uint64 address_id = 1;
  }
  string access_token = 1;
  Body body = 2;
}

message FirstResponse {
  uint64 registry_id = 1;
}

message SecondRequest {
  message Body {
    string name = 1;
    uint64 duration_in_minutes = 2;
    Price price = 3;
  }
  string access_token = 1;
  Body body = 2;
}

message ThirdRequest {
  message Body {
    uint64 calendar_id = 1;
  }

  string access_token = 1;
  Body body = 2;
}

message ThirdResponse {
  uint64 service_id = 1;
  ServiceData data = 2;
}

message CreateCalendarRequest {
  string access_token = 1;
  CalendarData body = 2;
}

message CalendarData {
  string name = 1;
  uint64 group_id = 2;
  repeated AvailabilityData availabilities = 3;
}

message CreateCalendarResponse {
  uint64 calendar_id = 1;
  CalendarData data = 2;
}

// 24 hour format
message TimeOfDay {
  int64 hour = 1;
  int64 minute = 2;
}

message AvailabilityData {
  string dow = 2;
  TimeOfDay start = 3;
  TimeOfDay end = 4;
}

message Price {
  double min = 1;
  double max = 2;
}

